[package]
name = "spark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "crates/server", package = "server" }
tokio = { version = "1.25.0", features = ["full"] }

[workspace]
members = [
	"crates/protocol",
	"crates/server",
	"crates/amqp",
]
