[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
amqp = { path = "../amqp", package = "amqp" }
protocol = { path = "../protocol", package = "protocol" }
anyhow = "1.0.69"
log = "0.4.17"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
